@@ -1,3 +1,8 @@
+2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/general/DatasetUtilities.java
+    (sampleFunction2D): Fixed sample count bug.
+
 2008-03-27  David Gilbert  <david.gilbert@object-refinery.com>
 
     Bug 1927239:
